corrected header spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 /* Puts location of the Nav bar on the page */
 .navloc {
     margin-right: 15%;
-    margin: 200px;
 }
 /* Style the links inside the navigation bar */
 .topnav a {
